add function validate form and regex firstname and lastname

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -65,7 +65,7 @@
             <!-- FIRST NAME -->
             <div class="formData" data-error="Veuillez saisir 2 caractères ou plus">
               <label for="first">Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
+              <input class="text-control" type="text" id="first" name="first" /><br>
             </div>
             <!-- LAST NAME -->
             <div class="formData" data-error="Veuillez saisir 2 caractères ou plus">
@@ -78,12 +78,12 @@
               <input class="text-control" type="email" id="email" name="email" /><br>
             </div>
             <!-- BIRTHDATE-->
-            <div class="formData" data-error="Vous devez saisir votre date de naissance">
+            <div class="formData" data-error="Veuillez saisir votre date de naissance">
               <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
             <!-- TOURNAMENTS NUMBERS -->
-            <div class="formData" data-error-visible="Veuillez saisir une valeur numérique">
+            <div class="formData" data-error="Veuillez saisir une valeur numérique">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
             </div>
@@ -118,7 +118,7 @@
 
             <!-- TERMS OF USE -->
 
-            <div class="formData" data-error="Vous devez accepter les conditions d'utilisation"
+            <div class="formData" data-error="Veuillez accepter les conditions d'utilisation"
               data-error-visible="false">
               <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
               <label class="checkbox2-label" for="checkbox1">
