update function validate form : city and terms of use

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -65,12 +65,12 @@
             <!-- FIRST NAME -->
             <div class="formData" data-error="Veuillez saisir 2 caractères ou plus">
               <label for="first">Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first" /><br>
+              <input class="text-control" type="text" id="first" name="first" maxlength="20" /><br>
             </div>
             <!-- LAST NAME -->
             <div class="formData" data-error="Veuillez saisir 2 caractères ou plus">
               <label for="last">Nom</label><br>
-              <input class="text-control" type="text" id="last" name="last" /><br>
+              <input class="text-control" type="text" id="last" name="last" max="20" /><br>
             </div>
             <!-- EMAIL -->
             <div class="formData" data-error="Veuillez saisir une adresse email valide">
