--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -45,7 +45,7 @@
           Vous aimez jouer ? Notre prochain évènement gaming est ouvert
           aux réservations... Places limitées !
         </p>
-        <button class="btn-signup modal-btn">
+        <button id="btn-signup" class="btn-signup modal-btn">
           je m'inscris
         </button>
       </div>
@@ -133,11 +133,20 @@
               </label>
               <br>
             </div>
-            <input class="btn-submit" type="submit" value="C'est parti" />
+            <input class="btn-submit" id="btn-submit" type="submit" value="C'est parti" />
           </form>
         </div>
+        <!-- Confirmation MESSAGE-->
+        <div class="confirm-success">
+          <div class="content">
+            <span class="close-confirmation"></span>
+            <div class="confirm-message">
+              Votre demande d'inscription a bien été reçue
+            </div>
+            <input type="button">
+          </div>
+        </div>
       </div>
-    </div>
   </main>
   <footer>
     <p class="copyrights">
