add regex for field birthdate

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -78,7 +78,7 @@
               <input class="text-control" type="email" id="email" name="email" /><br>
             </div>
             <!-- BIRTHDATE-->
-            <div class="formData" data-error="Veuillez saisir votre date de naissance">
+            <div class="formData" data-error="Veuillez saisir une date de naissance valide">
               <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
             </div>
@@ -139,11 +139,11 @@
         <!-- Confirmation MESSAGE-->
         <div class="confirm-success">
           <div class="content">
-            <span class="close-confirmation"></span>
+            <span class="close-message-confirmation"></span>
             <div class="confirm-message">
               Votre demande d'inscription a bien été reçue
             </div>
-            <input type="button">
+            <input type="button" class="close-message-confirmation close">
           </div>
         </div>
       </div>
