add confirmation message

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -139,11 +139,12 @@
         <!-- Confirmation MESSAGE-->
         <div class="confirm-success">
           <div class="content">
-            <span class="close-message-confirmation"></span>
+            <span class="close close-message-confirmation"></span>
             <div class="confirm-message">
+              Merci ! <br><br>
               Votre demande d'inscription a bien été reçue
             </div>
-            <input type="button" class="close-message-confirmation close">
+            <button class="close-message-confirmation">Fermer</button>
           </div>
         </div>
       </div>
