--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -61,7 +61,7 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate(event);">
+          <form name="reserve">
             <!-- FIRST NAME -->
             <div class="formData" data-error="Veuillez saisir 2 caractères ou plus">
               <label for="first">Prénom</label><br>
@@ -133,21 +133,22 @@
               </label>
               <br>
             </div>
-            <input class="btn-submit" id="btn-submit" type="submit" value="C'est parti" />
+            <input class="btn-submit" id="btn-submit" type="button" onclick="validate(event)" value=" C'estparti" />
           </form>
         </div>
-        <!-- Confirmation MESSAGE-->
-        <div class="confirm-success">
-          <div class="content">
-            <span class="close close-message-confirmation"></span>
-            <div class="confirm-message">
-              Merci ! <br><br>
-              Votre demande d'inscription a bien été reçue
-            </div>
-            <button class="close-message-confirmation">Fermer</button>
-          </div>
-        </div>
       </div>
+    </div>
+    <!-- Confirmation MESSAGE-->
+    <div class="confirm-success">
+      <div class="content">
+        <span class="close close-message-confirmation"></span>
+        <div class="confirm-message">
+          Merci ! <br><br>
+          Votre demande d'inscription a bien été reçue
+        </div>
+        <button class="close-message-confirmation">Fermer</button>
+      </div>
+    </div>
   </main>
   <footer>
     <p class="copyrights">
