--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -133,7 +133,9 @@
               </label>
               <br>
             </div>
-            <input class="btn-submit" id="btn-submit" type="button" onclick="validate(event)" value=" C'estparti" />
+          </form>
+          <!-- event onclick when the user clicked on the button -->
+          <input class="btn-submit" id="btn-submit" type="button" onclick="validate(event)" value=" C'est parti" />
           </form>
         </div>
       </div>
